# handle_update_userver

./: .clang-format  .gitmodules  CMakeLists.txt  Makefile  README.md  docker-compose.yml
configs/: config_vars.testing.yaml  config_vars.yaml  static_config.yaml
postgresql/schemas/: db_1.sql
src/: main.cpp
src/db/: sql.hpp  types.hpp
src/dto/: user.cpp  user.hpp
src/handlers/auth/: auth_bearer.cpp  auth_bearer.hpp
src/handlers/users/: login.cpp  login.hpp  profile.cpp  profile.hpp  signup.cpp  signup.hpp  update.cpp  update.hpp
src/tests/: extractors_test.cpp  jwt_test.cpp  validators_test.cpp
src/utils/: consts.hpp  errors.cpp  errors.hpp  extractors.cpp  extractors.hpp  jwt.cpp  jwt.hpp  validators.cpp  validators.hpp
tests/: CMakeLists.txt  conftest.py  requirements.txt
tests/helpers/: endpoints.py  models.py  utils.py  validators.py
tests/users/: test_login.py  test_profile.py  test_signup.py  test_update.py
